onSelect is not always called